src/y.output
   0  $accept : program $end

   1  program : header_program '{' ejecucion '}' ';'
   2          | header_program
   3          | header_program '{' ejecucion
   4          | header_program '{' '}'

   5  header_program : ID

   6  declaracion_variables : tipo lista_variables ';'
   7                        | lista_variables ';'
   8                        | lista_variables

   9  lista_variables : lista_variables ',' ID
  10                  | ID

  11  sentencia_declarable : declaracion_variables
  12                       | funcion

  13  funcion : header_funcion ejecucion_funcion

  14  header_funcion : FUN ID '(' lista_parametros ')' ':' tipo
  15                 | FUN ID '(' ')' ':' tipo
  16                 | FUN ID '(' lista_parametros ')' ':'
  17                 | FUN ID '(' lista_parametros ')'
  18                 | FUN '(' lista_parametros ')' ':' tipo
  19                 | FUN '(' ')' ':' tipo
  20                 | FUN ID lista_parametros ':' tipo
  21                 | FUN ID ':' tipo

  22  lista_parametros : parametro
  23                   | parametro ',' parametro

  24  parametro : tipo ID
  25            | ID
  26            | tipo

  27  tipo : I32
  28       | F32

  29  ejecucion_funcion : '{' bloque_funcion RETURN '(' expresion ')' ';' '}' ';'
  30                    | '{' RETURN '(' expresion ')' ';' '}' ';'
  31                    | '{' bloque_funcion RETURN '(' expresion ')' ';' bloque_funcion '}' ';'

  32  bloque_funcion : bloque_funcion sentencia
  33                 | sentencia

  34  ejecucion_control : ejecucion_control sentencia_ejecutable
  35                    | sentencia_ejecutable

  36  ejecucion : ejecucion sentencia
  37            | sentencia

  38  sentencia : sentencia_ejecutable
  39            | sentencia_declarable

  40  sentencia_ejecutable : asignacion ';'
  41                       | seleccion ';'
  42                       | impresion ';'
  43                       | iteracion_while
  44                       | invocacion_con_d
  45                       | invocacion
  46                       | error ';'

  47  invocacion_con_d : DISCARD invocacion

  48  iteracion_while : WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'
  49                  | WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion break '}' ';'
  50                  | WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion continue '}' ';'
  51                  | WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable
  52                  | ID ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'
  53                  | ID ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion break '}' ';'
  54                  | ID ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion continue '}' ';'
  55                  | ID ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable
  56                  | WHILE ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'
  57                  | WHILE '(' comparacion_bool ')' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'
  58                  | WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' '}' ';'
  59                  | WHILE '(' ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'
  60                  | WHILE '(' comparacion_bool ')' ':' '(' ')' '{' ejecucion_iteracion '}' ';'
  61                  | WHILE '(' comparacion_bool ')' '(' asignacion ')' sentencia_ejecutable ';'
  62                  | WHILE '(' comparacion_bool ')' ':' sentencia_ejecutable ';'
  63                  | WHILE '(' comparacion_bool ')' ':' '(' ')' sentencia_ejecutable ';'
  64                  | WHILE '(' comparacion_bool ')' ':' asignacion sentencia_ejecutable ';'

  65  ejecucion_iteracion : ejecucion_iteracion sentencia_ejecutable
  66                      | sentencia_ejecutable

  67  continue : CONTINUE
  68           | CONTINUE ':' ID

  69  break : BREAK CTE
  70        | BREAK '-' CTE

  71  seleccion : IF condicion_salto_if then_seleccion_sin_else ENDIF
  72            | IF condicion_salto_if then_seleccion else_seleccion ENDIF
  73            | IF condicion_salto_if '{' ejecucion_control '}' else_seleccion ENDIF
  74            | IF condicion_salto_if then_seleccion '{' ejecucion_control '}' ENDIF
  75            | IF condicion_salto_if THEN ENDIF
  76            | IF condicion_salto_if then_seleccion ELSE ENDIF
  77            | IF condicion_salto_if THEN else_seleccion ENDIF
  78            | IF condicion_salto_if then_seleccion_sin_else
  79            | IF condicion_salto_if then_seleccion else_seleccion

  80  then_seleccion : THEN '{' ejecucion_control '}' ';'
  81                 | THEN sentencia_ejecutable
  82                 | '{' ejecucion_control '}' ';'
  83                 | sentencia_ejecutable
  84                 | THEN '{' ejecucion_control
  85                 | THEN '{' '}'
  86                 | THEN ejecucion_control '}'

  87  then_seleccion_sin_else : THEN '{' ejecucion_control '}' ';'
  88                          | THEN sentencia_ejecutable
  89                          | '{' ejecucion_control '}' ';'
  90                          | sentencia_ejecutable
  91                          | THEN '{' ejecucion_control
  92                          | THEN '{' '}'
  93                          | THEN ejecucion_control '}'

  94  else_seleccion : ELSE '{' ejecucion_control '}' ';'
  95                 | ELSE sentencia_ejecutable
  96                 | ELSE '{' '}' ';'
  97                 | ELSE ejecucion_control '}' ';'

  98  condicion_salto_if : '(' comparacion_bool ')'
  99                     | comparacion_bool ')'
 100                     | '(' comparacion_bool
 101                     | comparacion_bool
 102                     | '(' ')'

 103  comparacion_bool : expresion comparador expresion

 104  comparador : '>'
 105             | '<'
 106             | '='
 107             | MAYOR_IGUAL
 108             | MENOR_IGUAL
 109             | DISTINTO

 110  asignacion : ID ASIGNACION expresion
 111             | ID ASIGNACION iteracion_while else_asignacion_iteracion
 112             | ID ASIGNACION iteracion_while

 113  else_asignacion_iteracion : ELSE CTE
 114                            | ELSE '-' CTE

 115  expresion : expresion '+' termino
 116            | expresion '-' termino
 117            | termino
 118            | TOF32 '(' expresion '+' termino ')'
 119            | TOF32 '(' expresion '-' termino ')'
 120            | TOF32 '(' termino ')'

 121  termino : termino '*' factor
 122          | termino '/' factor
 123          | factor

 124  combinacion_terminales : ID
 125                         | CTE
 126                         | '-' CTE

 127  invocacion : ID '(' combinacion_terminales ',' combinacion_terminales ')'
 128             | ID '(' combinacion_terminales ')'
 129             | ID '(' ')'

 130  factor : combinacion_terminales
 131         | invocacion

 132  impresion : OUT '(' CADENA ')'
 133            | OUT '(' ')'
 134            | OUT
 135            | OUT CADENA

state 0
	$accept : . program $end  (0)

	ID  shift 1
	.  error

	program  goto 2
	header_program  goto 3


state 1
	header_program : ID .  (5)

	.  reduce 5


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : header_program . '{' ejecucion '}' ';'  (1)
	program : header_program .  (2)
	program : header_program . '{' ejecucion  (3)
	program : header_program . '{' '}'  (4)

	'{'  shift 4
	$end  reduce 2


state 4
	program : header_program '{' . ejecucion '}' ';'  (1)
	program : header_program '{' . ejecucion  (3)
	program : header_program '{' . '}'  (4)

	error  shift 5
	ID  shift 6
	IF  shift 7
	OUT  shift 8
	FUN  shift 9
	WHILE  shift 10
	I32  shift 11
	F32  shift 12
	DISCARD  shift 13
	'}'  shift 14
	.  error

	ejecucion  goto 15
	declaracion_variables  goto 16
	tipo  goto 17
	lista_variables  goto 18
	sentencia_declarable  goto 19
	funcion  goto 20
	header_funcion  goto 21
	sentencia  goto 22
	sentencia_ejecutable  goto 23
	asignacion  goto 24
	seleccion  goto 25
	impresion  goto 26
	iteracion_while  goto 27
	invocacion_con_d  goto 28
	invocacion  goto 29


state 5
	sentencia_ejecutable : error . ';'  (46)

	';'  shift 30
	.  error


state 6
	lista_variables : ID .  (10)
	iteracion_while : ID . ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (52)
	iteracion_while : ID . ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion break '}' ';'  (53)
	iteracion_while : ID . ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion continue '}' ';'  (54)
	iteracion_while : ID . ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable  (55)
	asignacion : ID . ASIGNACION expresion  (110)
	asignacion : ID . ASIGNACION iteracion_while else_asignacion_iteracion  (111)
	asignacion : ID . ASIGNACION iteracion_while  (112)
	invocacion : ID . '(' combinacion_terminales ',' combinacion_terminales ')'  (127)
	invocacion : ID . '(' combinacion_terminales ')'  (128)
	invocacion : ID . '(' ')'  (129)

	ASIGNACION  shift 31
	'('  shift 32
	':'  shift 33
	$end  reduce 10
	error  reduce 10
	ID  reduce 10
	IF  reduce 10
	OUT  reduce 10
	FUN  reduce 10
	RETURN  reduce 10
	WHILE  reduce 10
	I32  reduce 10
	F32  reduce 10
	DISCARD  reduce 10
	'}'  reduce 10
	';'  reduce 10
	','  reduce 10


state 7
	seleccion : IF . condicion_salto_if then_seleccion_sin_else ENDIF  (71)
	seleccion : IF . condicion_salto_if then_seleccion else_seleccion ENDIF  (72)
	seleccion : IF . condicion_salto_if '{' ejecucion_control '}' else_seleccion ENDIF  (73)
	seleccion : IF . condicion_salto_if then_seleccion '{' ejecucion_control '}' ENDIF  (74)
	seleccion : IF . condicion_salto_if THEN ENDIF  (75)
	seleccion : IF . condicion_salto_if then_seleccion ELSE ENDIF  (76)
	seleccion : IF . condicion_salto_if THEN else_seleccion ENDIF  (77)
	seleccion : IF . condicion_salto_if then_seleccion_sin_else  (78)
	seleccion : IF . condicion_salto_if then_seleccion else_seleccion  (79)

	ID  shift 34
	CTE  shift 35
	TOF32  shift 36
	'-'  shift 37
	'('  shift 38
	.  error

	expresion  goto 39
	invocacion  goto 40
	comparacion_bool  goto 41
	condicion_salto_if  goto 42
	termino  goto 43
	factor  goto 44
	combinacion_terminales  goto 45


state 8
	impresion : OUT . '(' CADENA ')'  (132)
	impresion : OUT . '(' ')'  (133)
	impresion : OUT .  (134)
	impresion : OUT . CADENA  (135)

	CADENA  shift 46
	'('  shift 47
	';'  reduce 134


state 9
	header_funcion : FUN . ID '(' lista_parametros ')' ':' tipo  (14)
	header_funcion : FUN . ID '(' ')' ':' tipo  (15)
	header_funcion : FUN . ID '(' lista_parametros ')' ':'  (16)
	header_funcion : FUN . ID '(' lista_parametros ')'  (17)
	header_funcion : FUN . '(' lista_parametros ')' ':' tipo  (18)
	header_funcion : FUN . '(' ')' ':' tipo  (19)
	header_funcion : FUN . ID lista_parametros ':' tipo  (20)
	header_funcion : FUN . ID ':' tipo  (21)

	ID  shift 48
	'('  shift 49
	.  error


state 10
	iteracion_while : WHILE . '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (48)
	iteracion_while : WHILE . '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion break '}' ';'  (49)
	iteracion_while : WHILE . '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion continue '}' ';'  (50)
	iteracion_while : WHILE . '(' comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable  (51)
	iteracion_while : WHILE . ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (56)
	iteracion_while : WHILE . '(' comparacion_bool ')' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (57)
	iteracion_while : WHILE . '(' comparacion_bool ')' ':' '(' asignacion ')' '{' '}' ';'  (58)
	iteracion_while : WHILE . '(' ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (59)
	iteracion_while : WHILE . '(' comparacion_bool ')' ':' '(' ')' '{' ejecucion_iteracion '}' ';'  (60)
	iteracion_while : WHILE . '(' comparacion_bool ')' '(' asignacion ')' sentencia_ejecutable ';'  (61)
	iteracion_while : WHILE . '(' comparacion_bool ')' ':' sentencia_ejecutable ';'  (62)
	iteracion_while : WHILE . '(' comparacion_bool ')' ':' '(' ')' sentencia_ejecutable ';'  (63)
	iteracion_while : WHILE . '(' comparacion_bool ')' ':' asignacion sentencia_ejecutable ';'  (64)

	'('  shift 50
	':'  shift 51
	.  error


state 11
	tipo : I32 .  (27)

	.  reduce 27


state 12
	tipo : F32 .  (28)

	.  reduce 28


state 13
	invocacion_con_d : DISCARD . invocacion  (47)

	ID  shift 52
	.  error

	invocacion  goto 53


state 14
	program : header_program '{' '}' .  (4)

	.  reduce 4


state 15
	program : header_program '{' ejecucion . '}' ';'  (1)
	program : header_program '{' ejecucion .  (3)
	ejecucion : ejecucion . sentencia  (36)

	error  shift 5
	ID  shift 6
	IF  shift 7
	OUT  shift 8
	FUN  shift 9
	WHILE  shift 10
	I32  shift 11
	F32  shift 12
	DISCARD  shift 13
	'}'  shift 54
	$end  reduce 3

	declaracion_variables  goto 16
	tipo  goto 17
	lista_variables  goto 18
	sentencia_declarable  goto 19
	funcion  goto 20
	header_funcion  goto 21
	sentencia  goto 55
	sentencia_ejecutable  goto 23
	asignacion  goto 24
	seleccion  goto 25
	impresion  goto 26
	iteracion_while  goto 27
	invocacion_con_d  goto 28
	invocacion  goto 29


state 16
	sentencia_declarable : declaracion_variables .  (11)

	.  reduce 11


state 17
	declaracion_variables : tipo . lista_variables ';'  (6)

	ID  shift 56
	.  error

	lista_variables  goto 57


state 18
	declaracion_variables : lista_variables . ';'  (7)
	declaracion_variables : lista_variables .  (8)
	lista_variables : lista_variables . ',' ID  (9)

	';'  shift 58
	','  shift 59
	$end  reduce 8
	error  reduce 8
	ID  reduce 8
	IF  reduce 8
	OUT  reduce 8
	FUN  reduce 8
	RETURN  reduce 8
	WHILE  reduce 8
	I32  reduce 8
	F32  reduce 8
	DISCARD  reduce 8
	'}'  reduce 8


state 19
	sentencia : sentencia_declarable .  (39)

	.  reduce 39


state 20
	sentencia_declarable : funcion .  (12)

	.  reduce 12


state 21
	funcion : header_funcion . ejecucion_funcion  (13)

	'{'  shift 60
	.  error

	ejecucion_funcion  goto 61


state 22
	ejecucion : sentencia .  (37)

	.  reduce 37


state 23
	sentencia : sentencia_ejecutable .  (38)

	.  reduce 38


state 24
	sentencia_ejecutable : asignacion . ';'  (40)

	';'  shift 62
	.  error


state 25
	sentencia_ejecutable : seleccion . ';'  (41)

	';'  shift 63
	.  error


state 26
	sentencia_ejecutable : impresion . ';'  (42)

	';'  shift 64
	.  error


state 27
	sentencia_ejecutable : iteracion_while .  (43)

	.  reduce 43


state 28
	sentencia_ejecutable : invocacion_con_d .  (44)

	.  reduce 44


state 29
	sentencia_ejecutable : invocacion .  (45)

	.  reduce 45


state 30
	sentencia_ejecutable : error ';' .  (46)

	.  reduce 46


state 31
	asignacion : ID ASIGNACION . expresion  (110)
	asignacion : ID ASIGNACION . iteracion_while else_asignacion_iteracion  (111)
	asignacion : ID ASIGNACION . iteracion_while  (112)

	ID  shift 65
	CTE  shift 35
	WHILE  shift 10
	TOF32  shift 36
	'-'  shift 37
	.  error

	expresion  goto 66
	iteracion_while  goto 67
	invocacion  goto 40
	termino  goto 43
	factor  goto 44
	combinacion_terminales  goto 45


state 32
	invocacion : ID '(' . combinacion_terminales ',' combinacion_terminales ')'  (127)
	invocacion : ID '(' . combinacion_terminales ')'  (128)
	invocacion : ID '(' . ')'  (129)

	ID  shift 68
	CTE  shift 35
	'-'  shift 37
	')'  shift 69
	.  error

	combinacion_terminales  goto 70


state 33
	iteracion_while : ID ':' . WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (52)
	iteracion_while : ID ':' . WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion break '}' ';'  (53)
	iteracion_while : ID ':' . WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion continue '}' ';'  (54)
	iteracion_while : ID ':' . WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable  (55)

	WHILE  shift 71
	.  error


state 34
	combinacion_terminales : ID .  (124)
	invocacion : ID . '(' combinacion_terminales ',' combinacion_terminales ')'  (127)
	invocacion : ID . '(' combinacion_terminales ')'  (128)
	invocacion : ID . '(' ')'  (129)

	'('  shift 32
	error  reduce 124
	ID  reduce 124
	IF  reduce 124
	THEN  reduce 124
	OUT  reduce 124
	WHILE  reduce 124
	MAYOR_IGUAL  reduce 124
	MENOR_IGUAL  reduce 124
	DISTINTO  reduce 124
	DISCARD  reduce 124
	'+'  reduce 124
	'-'  reduce 124
	'*'  reduce 124
	'/'  reduce 124
	'{'  reduce 124
	';'  reduce 124
	')'  reduce 124
	'>'  reduce 124
	'<'  reduce 124
	'='  reduce 124


state 35
	combinacion_terminales : CTE .  (125)

	.  reduce 125


state 36
	expresion : TOF32 . '(' expresion '+' termino ')'  (118)
	expresion : TOF32 . '(' expresion '-' termino ')'  (119)
	expresion : TOF32 . '(' termino ')'  (120)

	'('  shift 72
	.  error


state 37
	combinacion_terminales : '-' . CTE  (126)

	CTE  shift 73
	.  error


state 38
	condicion_salto_if : '(' . comparacion_bool ')'  (98)
	condicion_salto_if : '(' . comparacion_bool  (100)
	condicion_salto_if : '(' . ')'  (102)

	ID  shift 34
	CTE  shift 35
	TOF32  shift 36
	'-'  shift 37
	')'  shift 74
	.  error

	expresion  goto 39
	invocacion  goto 40
	comparacion_bool  goto 75
	termino  goto 43
	factor  goto 44
	combinacion_terminales  goto 45


state 39
	comparacion_bool : expresion . comparador expresion  (103)
	expresion : expresion . '+' termino  (115)
	expresion : expresion . '-' termino  (116)

	MAYOR_IGUAL  shift 76
	MENOR_IGUAL  shift 77
	DISTINTO  shift 78
	'+'  shift 79
	'-'  shift 80
	'>'  shift 81
	'<'  shift 82
	'='  shift 83
	.  error

	comparador  goto 84


state 40
	factor : invocacion .  (131)

	.  reduce 131


state 41
	condicion_salto_if : comparacion_bool . ')'  (99)
	condicion_salto_if : comparacion_bool .  (101)

	')'  shift 85
	error  reduce 101
	ID  reduce 101
	IF  reduce 101
	THEN  reduce 101
	OUT  reduce 101
	WHILE  reduce 101
	DISCARD  reduce 101
	'{'  reduce 101


state 42
	seleccion : IF condicion_salto_if . then_seleccion_sin_else ENDIF  (71)
	seleccion : IF condicion_salto_if . then_seleccion else_seleccion ENDIF  (72)
	seleccion : IF condicion_salto_if . '{' ejecucion_control '}' else_seleccion ENDIF  (73)
	seleccion : IF condicion_salto_if . then_seleccion '{' ejecucion_control '}' ENDIF  (74)
	seleccion : IF condicion_salto_if . THEN ENDIF  (75)
	seleccion : IF condicion_salto_if . then_seleccion ELSE ENDIF  (76)
	seleccion : IF condicion_salto_if . THEN else_seleccion ENDIF  (77)
	seleccion : IF condicion_salto_if . then_seleccion_sin_else  (78)
	seleccion : IF condicion_salto_if . then_seleccion else_seleccion  (79)

	error  shift 5
	ID  shift 86
	IF  shift 7
	THEN  shift 87
	OUT  shift 8
	WHILE  shift 10
	DISCARD  shift 13
	'{'  shift 88
	.  error

	sentencia_ejecutable  goto 89
	asignacion  goto 24
	seleccion  goto 25
	impresion  goto 26
	iteracion_while  goto 27
	invocacion_con_d  goto 28
	invocacion  goto 29
	then_seleccion_sin_else  goto 90
	then_seleccion  goto 91


state 43
	expresion : termino .  (117)
	termino : termino . '*' factor  (121)
	termino : termino . '/' factor  (122)

	'*'  shift 92
	'/'  shift 93
	error  reduce 117
	ID  reduce 117
	IF  reduce 117
	THEN  reduce 117
	OUT  reduce 117
	WHILE  reduce 117
	MAYOR_IGUAL  reduce 117
	MENOR_IGUAL  reduce 117
	DISTINTO  reduce 117
	DISCARD  reduce 117
	'+'  reduce 117
	'-'  reduce 117
	'{'  reduce 117
	';'  reduce 117
	')'  reduce 117
	'>'  reduce 117
	'<'  reduce 117
	'='  reduce 117


state 44
	termino : factor .  (123)

	.  reduce 123


state 45
	factor : combinacion_terminales .  (130)

	.  reduce 130


state 46
	impresion : OUT CADENA .  (135)

	.  reduce 135


state 47
	impresion : OUT '(' . CADENA ')'  (132)
	impresion : OUT '(' . ')'  (133)

	CADENA  shift 94
	')'  shift 95
	.  error


state 48
	header_funcion : FUN ID . '(' lista_parametros ')' ':' tipo  (14)
	header_funcion : FUN ID . '(' ')' ':' tipo  (15)
	header_funcion : FUN ID . '(' lista_parametros ')' ':'  (16)
	header_funcion : FUN ID . '(' lista_parametros ')'  (17)
	header_funcion : FUN ID . lista_parametros ':' tipo  (20)
	header_funcion : FUN ID . ':' tipo  (21)

	ID  shift 96
	I32  shift 11
	F32  shift 12
	'('  shift 97
	':'  shift 98
	.  error

	tipo  goto 99
	lista_parametros  goto 100
	parametro  goto 101


state 49
	header_funcion : FUN '(' . lista_parametros ')' ':' tipo  (18)
	header_funcion : FUN '(' . ')' ':' tipo  (19)

	ID  shift 96
	I32  shift 11
	F32  shift 12
	')'  shift 102
	.  error

	tipo  goto 99
	lista_parametros  goto 103
	parametro  goto 101


state 50
	iteracion_while : WHILE '(' . comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (48)
	iteracion_while : WHILE '(' . comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion break '}' ';'  (49)
	iteracion_while : WHILE '(' . comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion continue '}' ';'  (50)
	iteracion_while : WHILE '(' . comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable  (51)
	iteracion_while : WHILE '(' . comparacion_bool ')' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (57)
	iteracion_while : WHILE '(' . comparacion_bool ')' ':' '(' asignacion ')' '{' '}' ';'  (58)
	iteracion_while : WHILE '(' . ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (59)
	iteracion_while : WHILE '(' . comparacion_bool ')' ':' '(' ')' '{' ejecucion_iteracion '}' ';'  (60)
	iteracion_while : WHILE '(' . comparacion_bool ')' '(' asignacion ')' sentencia_ejecutable ';'  (61)
	iteracion_while : WHILE '(' . comparacion_bool ')' ':' sentencia_ejecutable ';'  (62)
	iteracion_while : WHILE '(' . comparacion_bool ')' ':' '(' ')' sentencia_ejecutable ';'  (63)
	iteracion_while : WHILE '(' . comparacion_bool ')' ':' asignacion sentencia_ejecutable ';'  (64)

	ID  shift 34
	CTE  shift 35
	TOF32  shift 36
	'-'  shift 37
	')'  shift 104
	.  error

	expresion  goto 39
	invocacion  goto 40
	comparacion_bool  goto 105
	termino  goto 43
	factor  goto 44
	combinacion_terminales  goto 45


state 51
	iteracion_while : WHILE ':' . '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (56)

	'('  shift 106
	.  error


state 52
	invocacion : ID . '(' combinacion_terminales ',' combinacion_terminales ')'  (127)
	invocacion : ID . '(' combinacion_terminales ')'  (128)
	invocacion : ID . '(' ')'  (129)

	'('  shift 32
	.  error


state 53
	invocacion_con_d : DISCARD invocacion .  (47)

	.  reduce 47


state 54
	program : header_program '{' ejecucion '}' . ';'  (1)

	';'  shift 107
	.  error


state 55
	ejecucion : ejecucion sentencia .  (36)

	.  reduce 36


state 56
	lista_variables : ID .  (10)

	.  reduce 10


state 57
	declaracion_variables : tipo lista_variables . ';'  (6)
	lista_variables : lista_variables . ',' ID  (9)

	';'  shift 108
	','  shift 59
	.  error


state 58
	declaracion_variables : lista_variables ';' .  (7)

	.  reduce 7


state 59
	lista_variables : lista_variables ',' . ID  (9)

	ID  shift 109
	.  error


state 60
	ejecucion_funcion : '{' . bloque_funcion RETURN '(' expresion ')' ';' '}' ';'  (29)
	ejecucion_funcion : '{' . RETURN '(' expresion ')' ';' '}' ';'  (30)
	ejecucion_funcion : '{' . bloque_funcion RETURN '(' expresion ')' ';' bloque_funcion '}' ';'  (31)

	error  shift 5
	ID  shift 6
	IF  shift 7
	OUT  shift 8
	FUN  shift 9
	RETURN  shift 110
	WHILE  shift 10
	I32  shift 11
	F32  shift 12
	DISCARD  shift 13
	.  error

	declaracion_variables  goto 16
	tipo  goto 17
	lista_variables  goto 18
	sentencia_declarable  goto 19
	funcion  goto 20
	header_funcion  goto 21
	bloque_funcion  goto 111
	sentencia  goto 112
	sentencia_ejecutable  goto 23
	asignacion  goto 24
	seleccion  goto 25
	impresion  goto 26
	iteracion_while  goto 27
	invocacion_con_d  goto 28
	invocacion  goto 29


state 61
	funcion : header_funcion ejecucion_funcion .  (13)

	.  reduce 13


state 62
	sentencia_ejecutable : asignacion ';' .  (40)

	.  reduce 40


state 63
	sentencia_ejecutable : seleccion ';' .  (41)

	.  reduce 41


state 64
	sentencia_ejecutable : impresion ';' .  (42)

	.  reduce 42


state 65
	iteracion_while : ID . ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (52)
	iteracion_while : ID . ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion break '}' ';'  (53)
	iteracion_while : ID . ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion continue '}' ';'  (54)
	iteracion_while : ID . ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable  (55)
	combinacion_terminales : ID .  (124)
	invocacion : ID . '(' combinacion_terminales ',' combinacion_terminales ')'  (127)
	invocacion : ID . '(' combinacion_terminales ')'  (128)
	invocacion : ID . '(' ')'  (129)

	'('  shift 32
	':'  shift 33
	error  reduce 124
	ID  reduce 124
	IF  reduce 124
	OUT  reduce 124
	WHILE  reduce 124
	DISCARD  reduce 124
	'+'  reduce 124
	'-'  reduce 124
	'*'  reduce 124
	'/'  reduce 124
	';'  reduce 124
	')'  reduce 124


state 66
	asignacion : ID ASIGNACION expresion .  (110)
	expresion : expresion . '+' termino  (115)
	expresion : expresion . '-' termino  (116)

	'+'  shift 79
	'-'  shift 80
	error  reduce 110
	ID  reduce 110
	IF  reduce 110
	OUT  reduce 110
	WHILE  reduce 110
	DISCARD  reduce 110
	';'  reduce 110
	')'  reduce 110


state 67
	asignacion : ID ASIGNACION iteracion_while . else_asignacion_iteracion  (111)
	asignacion : ID ASIGNACION iteracion_while .  (112)

	ELSE  shift 113
	error  reduce 112
	ID  reduce 112
	IF  reduce 112
	OUT  reduce 112
	WHILE  reduce 112
	DISCARD  reduce 112
	';'  reduce 112
	')'  reduce 112

	else_asignacion_iteracion  goto 114


state 68
	combinacion_terminales : ID .  (124)

	.  reduce 124


state 69
	invocacion : ID '(' ')' .  (129)

	.  reduce 129


state 70
	invocacion : ID '(' combinacion_terminales . ',' combinacion_terminales ')'  (127)
	invocacion : ID '(' combinacion_terminales . ')'  (128)

	','  shift 115
	')'  shift 116
	.  error


state 71
	iteracion_while : ID ':' WHILE . '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (52)
	iteracion_while : ID ':' WHILE . '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion break '}' ';'  (53)
	iteracion_while : ID ':' WHILE . '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion continue '}' ';'  (54)
	iteracion_while : ID ':' WHILE . '(' comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable  (55)

	'('  shift 117
	.  error


state 72
	expresion : TOF32 '(' . expresion '+' termino ')'  (118)
	expresion : TOF32 '(' . expresion '-' termino ')'  (119)
	expresion : TOF32 '(' . termino ')'  (120)

	ID  shift 34
	CTE  shift 35
	TOF32  shift 36
	'-'  shift 37
	.  error

	expresion  goto 118
	invocacion  goto 40
	termino  goto 119
	factor  goto 44
	combinacion_terminales  goto 45


state 73
	combinacion_terminales : '-' CTE .  (126)

	.  reduce 126


state 74
	condicion_salto_if : '(' ')' .  (102)

	.  reduce 102


state 75
	condicion_salto_if : '(' comparacion_bool . ')'  (98)
	condicion_salto_if : '(' comparacion_bool .  (100)

	')'  shift 120
	error  reduce 100
	ID  reduce 100
	IF  reduce 100
	THEN  reduce 100
	OUT  reduce 100
	WHILE  reduce 100
	DISCARD  reduce 100
	'{'  reduce 100


state 76
	comparador : MAYOR_IGUAL .  (107)

	.  reduce 107


state 77
	comparador : MENOR_IGUAL .  (108)

	.  reduce 108


state 78
	comparador : DISTINTO .  (109)

	.  reduce 109


state 79
	expresion : expresion '+' . termino  (115)

	ID  shift 34
	CTE  shift 35
	'-'  shift 37
	.  error

	invocacion  goto 40
	termino  goto 121
	factor  goto 44
	combinacion_terminales  goto 45


state 80
	expresion : expresion '-' . termino  (116)

	ID  shift 34
	CTE  shift 35
	'-'  shift 37
	.  error

	invocacion  goto 40
	termino  goto 122
	factor  goto 44
	combinacion_terminales  goto 45


state 81
	comparador : '>' .  (104)

	.  reduce 104


state 82
	comparador : '<' .  (105)

	.  reduce 105


state 83
	comparador : '=' .  (106)

	.  reduce 106


state 84
	comparacion_bool : expresion comparador . expresion  (103)
